<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_do" />

    <Button
        android:id="@+id/btnRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_re" />

    <Button
        android:id="@+id/btnMi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_mi" />

    <Button
        android:id="@+id/btnFa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_fa" />

    <Button
        android:id="@+id/btnSol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_sol" />

    <Button
        android:id="@+id/btnLa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_la" />

    <Button
        android:id="@+id/btnSi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_si" />

    <Button
        android:id="@+id/btnDo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_do" />

</LinearLayout>
